--- a/CoreAssessment-frontend/package.json
+++ b/CoreAssessment-frontend/package.json
@@ -10,26 +10,44 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.13.7",
-    "@mui/material": "^5.14.0",
+    "@ant-design/icons": "^5.4.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/x-date-pickers": "^6.9.2",
+    "@mui/x-charts": "^7.22.3",
+    "@mui/x-date-pickers": "^6.20.0",
+    "@mui/x-date-pickers-pro": "^7.2.0",
+    "antd": "^5.20.4",
     "axios": "^1.4.0",
-    "chart.js": "^4.3.0",
+    "chart.js": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.9",
-    "export-to-csv": "^0.2.1",
+    "export-to-csv": "^1.3.0",
     "js-cookie": "^3.0.5",
-    "react": "^18.2.0",
+    "material-react-table": "^2.13.0",
+    "moment": "^2.29.4",
+    "notistack": "^3.0.1",
+    "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-countdown": "^2.3.5",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-organizational-chart": "^2.2.1",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
+    "react-spring": "^9.7.4",
     "react-to-pdf": "^0.0.14",
     "react-to-print": "^2.14.13",
+    "react-zoom-pan-pinch": "^3.6.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
@@ -39,13 +57,17 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.2.14",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   }
